# config/routes.rb
@@ -27,15 +27,8 @@ Rails.application.routes.draw do
         resources :passwords, only: %i[create update]
       end
 
-      resources :countries, only: %i[index]
-
-      resources :departments, only: %i[index]
-
-      resources :cities, only: %i[index]
-
       resources :users, only: %i[index show create update destroy]
 
-      resources :tasks, only: %i[index show create update destroy]
     end
   end
 end
