# swagger/v1/swagger.yaml
@@ -138,337 +138,6 @@ paths:
                     type: string
                   message:
                     type: string
-  "/api/v1/cities":
-    get:
-      summary: Retrieve list of cities
-      tags:
-      - Cities
-      security:
-      - bearerAuth: []
-      parameters:
-      - name: countries[]
-        in: query
-        style: form
-        explode: true
-        schema:
-          type: array
-          items:
-            type: string
-        description: An array of country codes to filter cities by
-        required: true
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                  data:
-                    type: array
-                    items:
-                      type: string
-                  meta:
-                    type: object
-  "/api/v1/countries":
-    get:
-      summary: Retrieve list of countries
-      tags:
-      - Countries
-      security:
-      - bearerAuth: []
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                  data:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        code:
-                          type: string
-                        name:
-                          type: string
-                  meta:
-                    type: object
-  "/api/v1/departments":
-    get:
-      summary: Retrieve list of departments
-      tags:
-      - Departments
-      security:
-      - bearerAuth: []
-      parameters:
-      - name: countries[]
-        in: query
-        style: form
-        explode: true
-        schema:
-          type: array
-          items:
-            type: string
-        description: An array of country codes to filter departments by
-        required: true
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                  data:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        code:
-                          type: string
-                        name:
-                          type: string
-                  meta:
-                    type: object
-  "/api/v1/tasks":
-    get:
-      summary: List tasks
-      tags:
-      - Tasks
-      security:
-      - bearerAuth: []
-      parameters:
-      - name: page
-        in: query
-        description: Page number
-        schema:
-          type: integer
-      - name: per_page
-        in: query
-        description: How many records per page
-        schema:
-          type: integer
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                  data:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: string
-                        title:
-                          type: string
-                        description:
-                          type: string
-                        due_date:
-                          type: date
-                        status:
-                          type: string
-                        overdue:
-                          type: boolean
-                  meta:
-                    type: object
-                    properties:
-                      total_pages:
-                        type: integer
-                      page_number:
-                        type: integer
-                      max_per_page:
-                        type: integer
-                      total_resources:
-                        type: integer
-    post:
-      summary: Create task
-      tags:
-      - Tasks
-      security:
-      - bearerAuth: []
-      parameters: []
-      responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                  data:
-                    type: object
-                    properties:
-                      id:
-                        type: string
-                      title:
-                        type: string
-                      description:
-                        type: string
-                      due_date:
-                        type: date
-                      status:
-                        type: string
-                      overdue:
-                        type: boolean
-                  meta:
-                    type: object
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                task:
-                  type: object
-                  properties:
-                    title:
-                      type: string
-                    description:
-                      type: string
-                    due_date:
-                      type: string
-                    status:
-                      type: string
-                    user_id:
-                      type: string
-              required:
-              - title
-              - description
-              - due_date
-              - status
-              - user_id
-  "/api/v1/tasks/{id}":
-    parameters:
-    - name: id
-      in: path
-      required: true
-      schema:
-        type: integer
-    get:
-      summary: Show task
-      tags:
-      - Tasks
-      security:
-      - bearerAuth: []
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                  data:
-                    type: object
-                    properties:
-                      id:
-                        type: string
-                      title:
-                        type: string
-                      description:
-                        type: string
-                      due_date:
-                        type: date
-                      status:
-                        type: string
-                      overdue:
-                        type: boolean
-                  meta:
-                    type: object
-    put:
-      summary: Update task
-      tags:
-      - Tasks
-      security:
-      - bearerAuth: []
-      parameters: []
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                  data:
-                    type: object
-                    properties:
-                      id:
-                        type: string
-                      title:
-                        type: string
-                      description:
-                        type: string
-                      due_date:
-                        type: date
-                      status:
-                        type: string
-                      overdue:
-                        type: boolean
-                  meta:
-                    type: object
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                task:
-                  type: object
-                  properties:
-                    title:
-                      type: string
-                    description:
-                      type: string
-                    due_date:
-                      type: string
-                    status:
-                      type: string
-                    user_id:
-                      type: string
-              required:
-              - title
-              - description
-              - due_date
-              - status
-              - user_id
-    delete:
-      summary: Delete task
-      tags:
-      - Tasks
-      security:
-      - bearerAuth: []
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
   "/api/v1/users":
     get:
       summary: List users
